fixes jankiness on notifications menu collapsing

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -265,11 +265,8 @@ nav{
 }
 
 .menuUp .notificationsMessage, .menuUp .notificationsMessage a, .menuUp .deleteNotification{
-  display: none;
-}
-
-.menuDown .notificationsMessage, .menuDown .notificationsMessage a, .menuUp .deleteNotification{
-  display: visible;
+  opacity: 0;
+  pointer-events: none;
 }
 
 
